# mlp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  architecture.md  engineering_review.md  mlp_math.md  prd.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/activations/: relu.hpp  sigmoid.hpp  softmax.hpp  tanh.hpp
src/core/: matrix.hpp  vector.hpp
src/data/: csv_reader.hpp  data_pipeline.hpp  dataset.hpp
src/evaluation/: metrics.hpp
src/layers/: layer.hpp
src/loss/: cross_entropy.hpp  l2_regularization.hpp  mse.hpp
src/mlp/: mlp.hpp  trainer.hpp
tests/: CMakeLists.txt  test_activations.cpp  test_data.cpp  test_layer.cpp  test_loss.cpp  test_matrix.cpp  test_metrics.cpp  test_minibatch.cpp  test_mlp.cpp  test_placeholder.cpp  test_regularization.cpp  test_training.cpp  test_validation.cpp  test_vector.cpp
